<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">&#8217;backlog</string>

    <string name="summaries">Summaries</string>
    <string name="time_line">TimeLine</string>

    <string name="key_space_id">KEY_SPACE_ID</string>
    <string name="key_user_id">KEY_USER_ID</string>
    <string name="key_user_id_int">KEY_USER_ID_INT</string>
    <string name="key_password">KEY_PASSWORD</string>
    <string name="key_displayed">KEY_DISPLAYED</string>

    <string name="prefs">Preferences</string>
    <string name="space_id">Space ID</string>
    <string name="user_id">User ID</string>
    <string name="password">Password</string>
    <string name="backlog_domain">.backlog.jp</string>
    <string name="need_register">First, You need to register account information.</string>
    <string name="register">Register</string>

    <string name="reload">Reload</string>
    <string name="post">Post</string>

    <string name="loading">Loading…</string>
    <string name="cant_load">Cannot Load.</string>

</resources>
