<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingTop="8dp"
        >

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            >

        <EditText
                android:id="@+id/space_id"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/space_id"
                />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/backlog_domain"
                android:textSize="9pt"
                android:gravity="bottom"
                />
    </LinearLayout>

    <EditText
            android:id="@+id/user_id"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_id"
            />

    <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            />

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >
        <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/need_register"
                android:textSize="6pt"
                android:padding="4dp"
                />
        <Button
                android:id="@+id/save_prefs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                />
    </LinearLayout>

</LinearLayout>